--- a/Jistar/.gitignore
+++ b/Jistar/.gitignore
@@ -155,4 +155,7 @@ fastlane/test_output
 
 iOSInjectionProject/
 
+# firebase config
+Jistar/GoogleService-Info.plist
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift
