--- a/Jistar/.gitignore
+++ b/Jistar/.gitignore
@@ -156,6 +156,6 @@ fastlane/test_output
 iOSInjectionProject/
 
 # firebase config
-Jistar/GoogleService-Info.plist
+GoogleService-Info.plist
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift
